--- a/examples/interaction_ecoset_alex_v2.ipynb
+++ b/examples/interaction_ecoset_alex_v2.ipynb
@@ -6,40 +6,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow.compat.v1 as tf \n",
+    "import tensorflow.compat.v1 as tf\n",
+    "import lucid_kietzmannlab.modelzoo.vision_models as models\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
-    "import lucid_kietzmannlab.modelzoo.vision_models as models\n",
     "import lucid_kietzmannlab.optvis.objectives as objectives\n",
     "import lucid_kietzmannlab.optvis.render as render\n",
-    "from IPython.display import clear_output\n",
     "from ipywidgets import interact, Dropdown, IntSlider\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## A notebook to maximally activate certain neurons in the Alex Net neural network "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Choose the alexnet model"
+    "from IPython.display import clear_output\n",
+    "from lucid_kietzmannlab.modelzoo.vision_models import get_layer_names_tensors\n",
+    "from lucid_kietzmannlab.recipes.image_activations import image_activations\n",
+    "tf.compat.v1.disable_eager_execution()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vkapoor/miniconda3/envs/lucidenv/lib/python3.12/site-packages/tensorflow/python/keras/engine/base_layer_v1.py:1694: UserWarning: `layer.apply` is deprecated and will be removed in a future version. Please use `layer.__call__` method instead.\n",
+      "  warnings.warn('`layer.apply` is deprecated and '\n",
+      "2024-06-09 14:35:19.434305: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:388] MLIR V1 optimization pass is not enabled\n"
+     ]
+    }
+   ],
    "source": [
-    "# Alexnet with ImageNet weights\n",
-    "model = models.AlexNet()"
+    "model_path = '/Users/vkapoor/Downloads/models/AlexNet/seed5.pb'\n",
+    "model = models.AlexNetv2(model_path=model_path)\n"
    ]
   },
   {
@@ -48,43 +45,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer_name_list = [layer_info[\"name\"] for layer_info in model.layers]\n",
-    "\n",
-    "\n",
-    "# Get the shape of each layer\n",
-    "with tf.Graph().as_default() as graph:\n",
-    "    # Import the model\n",
-    "    tf.import_graph_def(model.graph_def, name='')\n",
-    "\n",
-    "    # Get the shape of each tensor\n",
-    "    layer_shape_dict = {}\n",
-    "    with tf.compat.v1.Session() as sess:\n",
-    "        for layer_name in layer_name_list:\n",
-    "            try:\n",
-    "                tensor_shape = sess.graph.get_tensor_by_name(f'{layer_name}:0').shape\n",
-    "                \n",
-    "                if tensor_shape != ():\n",
-    "                  \n",
-    "                    if tensor_shape[0] is None:\n",
-    "                       \n",
-    "                       layer_shape_dict[layer_name] = tensor_shape\n",
-    "            except KeyError:\n",
-    "                # Handle the case where the tensor is not found\n",
-    "                layer_shape_dict[layer_name] = None\n",
-    "\n",
-    "\n",
+    "layer_shape_dict = model.layer_shape_dict\n",
     "C = lambda neuron: objectives.channel(*neuron)    \n",
     "def visualize(layer_name, channel):\n",
     "    # Check if the layer exists in the shape dictionary\n",
     "    if layer_name in layer_shape_dict:\n",
     "        # Check if the selected channel is within bounds\n",
-    "        print(layer_shape_dict[layer_name])\n",
     "        max_channel = layer_shape_dict[layer_name][-1] - 1\n",
     "        if 0 <= channel <= max_channel:\n",
     "            clear_output(wait=True)\n",
     "            # Render visualization for the selected layer and channel\n",
     "            try:\n",
-    "              _ = render.render_vis(model, C((layer_name, channel)))\n",
+    "              _ = render.render_vis(model, C((layer_name, channel)), scope = 'alexnet_v2')\n",
     "            except Exception:\n",
     "                print('No gradients for this layer')   \n",
     "\n",
@@ -97,7 +69,7 @@
     "            try:\n",
     "               image_channel = {} \n",
     "               for channel in tqdm(range(channel_slider.max)):    \n",
-    "                  images = render.render_vis(model, C((layer_name, channel)), verbose = False)\n",
+    "                  images = render.render_vis(model, C((layer_name, channel)), verbose = False, scope = 'alexnet_v2')\n",
     "                  image_channel[channel] = images \n",
     "            except Exception:\n",
     "                print('No gradients for this layer')    \n",
@@ -156,13 +128,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### In the code block below a user can interactively choose the layer to maximally activate the neuron of and then visualize it for a certain channel"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -170,12 +135,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "480f16dd1ca44254bb5fcb1d6d92caba",
+       "model_id": "1eedd6d242fd4ea0bf4c39e286c30828",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='Layer:', options=('Conv2D', 'Conv2D_1', 'Conv2D_2', 'Conv2D_3', 'C…"
+       "interactive(children=(Dropdown(description='Layer:', options=('conv1/Conv2D', 'conv2/Conv2D', 'conv3/Conv2D', …"
       ]
      },
      "metadata": {},
@@ -196,14 +161,7 @@
     "layer_dropdown.observe(update_channel_slider, names='value')\n",
     "\n",
     "# Create an interactive visualization\n",
-    "interact(visualize, layer_name=layer_dropdown, channel=channel_slider)     \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the code below we make a non-interactive plot of all the channels at that layer at once (Memory intensive)"
+    "interact(visualize, layer_name=layer_dropdown, channel=channel_slider)     "
    ]
   },
   {
@@ -212,15 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_channel = visualize_all()\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Visualize neuron activations for all the channels in the layer"
+    "image_channel = visualize_all()"
    ]
   },
   {
@@ -240,15 +190,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer_shape_dict"
+    "layer_shape_dict.values()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
