graph def debugging

--- a/examples/interation_between_neurons.ipynb
+++ b/examples/interation_between_neurons.ipynb
@@ -48,30 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer_name_list = [layer_info[\"name\"] for layer_info in model.layers]\n",
-    "\n",
-    "\n",
-    "# Get the shape of each layer\n",
-    "with tf.Graph().as_default() as graph:\n",
-    "    # Import the model\n",
-    "    tf.import_graph_def(model.graph_def, name='')\n",
-    "\n",
-    "    # Get the shape of each tensor\n",
-    "    layer_shape_dict = {}\n",
-    "    with tf.compat.v1.Session() as sess:\n",
-    "        for layer_name in layer_name_list:\n",
-    "            try:\n",
-    "                tensor_shape = sess.graph.get_tensor_by_name(f'{layer_name}:0').shape\n",
-    "                \n",
-    "                if tensor_shape != ():\n",
-    "                  \n",
-    "                    if tensor_shape[0] is None:\n",
-    "                       \n",
-    "                       layer_shape_dict[layer_name] = tensor_shape\n",
-    "            except KeyError:\n",
-    "                # Handle the case where the tensor is not found\n",
-    "                layer_shape_dict[layer_name] = None\n",
-    "\n",
+    "layer_shape_dict = model.layer_shape_dict\n",
     "\n",
     "C = lambda neuron: objectives.channel(*neuron)    \n",
     "def visualize(layer_name, channel):\n",
@@ -170,7 +147,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "480f16dd1ca44254bb5fcb1d6d92caba",
+       "model_id": "ab40c67de2654d0dbb3cef40642e0356",
        "version_major": 2,
        "version_minor": 0
       },
