--- a/examples/interaction_ecoset_alex_v2.ipynb
+++ b/examples/interaction_ecoset_alex_v2.ipynb
@@ -14,8 +14,6 @@
     "import lucid_kietzmannlab.optvis.render as render\n",
     "from ipywidgets import interact, Dropdown, IntSlider\n",
     "from IPython.display import clear_output\n",
-    "from lucid_kietzmannlab.modelzoo.vision_models import get_layer_names_tensors\n",
-    "from lucid_kietzmannlab.recipes.image_activations import image_activations\n",
     "tf.compat.v1.disable_eager_execution()"
    ]
   },
@@ -25,23 +23,55 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from /Users/vkapoor/Downloads/models/AlexNet/training_seed_05/model.ckpt_epoch89\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/vkapoor/miniconda3/envs/lucidenv/lib/python3.12/site-packages/tensorflow/python/keras/engine/base_layer_v1.py:1694: UserWarning: `layer.apply` is deprecated and will be removed in a future version. Please use `layer.__call__` method instead.\n",
-      "  warnings.warn('`layer.apply` is deprecated and '\n",
-      "2024-06-09 14:35:19.434305: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:388] MLIR V1 optimization pass is not enabled\n"
+      "2024-06-11 18:11:34.767788: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:388] MLIR V1 optimization pass is not enabled\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/vkapoor/python_workspace/lucid-kietzmannlab/src/lucid_kietzmannlab/modelzoo/vision_models.py:340: convert_variables_to_constants (from tensorflow.python.framework.convert_to_constants) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "This API was designed for TensorFlow v1. See https://www.tensorflow.org/guide/migrate for instructions on how to migrate your code to TensorFlow v2.\n",
+      "WARNING:tensorflow:From /Users/vkapoor/miniconda3/envs/lucidenv/lib/python3.12/site-packages/tensorflow/python/framework/convert_to_constants.py:946: extract_sub_graph (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "This API was designed for TensorFlow v1. See https://www.tensorflow.org/guide/migrate for instructions on how to migrate your code to TensorFlow v2.\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "property 'graph_def' of 'AlexNetv2' object has no setter",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m model_checkpoint_dir\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/Users/vkapoor/Downloads/models/AlexNet/training_seed_05\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      2\u001b[0m training_seed \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[0;32m----> 3\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mmodels\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mAlexNetv2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_checkpoint_dir\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel_checkpoint_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtraining_seed\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mtraining_seed\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/python_workspace/lucid-kietzmannlab/src/lucid_kietzmannlab/modelzoo/vision_models.py:324\u001b[0m, in \u001b[0;36mAlexNetv2.__init__\u001b[0;34m(self, model_checkpoint_dir, training_seed)\u001b[0m\n\u001b[1;32m    321\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_name \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_checkpoint_dir, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel.ckpt_epoch89\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mstr\u001b[39m(training_seed)\u001b[38;5;241m.\u001b[39mzfill(\u001b[38;5;241m2\u001b[39m)))\n\u001b[1;32m    322\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmeta_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(model_checkpoint_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel.ckpt_epoch89.meta\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 324\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlayer_shape_dict \u001b[38;5;241m=\u001b[39m \u001b[43m_get_layer_names_tensors\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/python_workspace/lucid-kietzmannlab/src/lucid_kietzmannlab/modelzoo/vision_models.py:240\u001b[0m, in \u001b[0;36m_get_layer_names_tensors\u001b[0;34m(model)\u001b[0m\n\u001b[1;32m    237\u001b[0m \u001b[38;5;66;03m# Get the shape of each layer\u001b[39;00m\n\u001b[1;32m    238\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tf\u001b[38;5;241m.\u001b[39mGraph()\u001b[38;5;241m.\u001b[39mas_default() \u001b[38;5;28;01mas\u001b[39;00m graph:\n\u001b[1;32m    239\u001b[0m     \u001b[38;5;66;03m# Import the model\u001b[39;00m\n\u001b[0;32m--> 240\u001b[0m     tf\u001b[38;5;241m.\u001b[39mimport_graph_def(\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgraph_def\u001b[49m, name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    242\u001b[0m     \u001b[38;5;66;03m# Get the shape of each tensor\u001b[39;00m\n\u001b[1;32m    243\u001b[0m     layer_shape_dict \u001b[38;5;241m=\u001b[39m {}\n",
+      "File \u001b[0;32m~/python_workspace/lucid-kietzmannlab/src/lucid_kietzmannlab/modelzoo/vision_models.py:346\u001b[0m, in \u001b[0;36mAlexNetv2.graph_def\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    339\u001b[0m         frozen_graph_def \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    340\u001b[0m             tf\u001b[38;5;241m.\u001b[39mcompat\u001b[38;5;241m.\u001b[39mv1\u001b[38;5;241m.\u001b[39mgraph_util\u001b[38;5;241m.\u001b[39mconvert_variables_to_constants(\n\u001b[1;32m    341\u001b[0m                 sess, sess\u001b[38;5;241m.\u001b[39mgraph_def, output_node_names\n\u001b[1;32m    342\u001b[0m             )\n\u001b[1;32m    343\u001b[0m         )\n\u001b[1;32m    345\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_graph_def \u001b[38;5;241m=\u001b[39m frozen_graph_def\n\u001b[0;32m--> 346\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgraph_def\u001b[49m \u001b[38;5;241m=\u001b[39m frozen_graph_def\n\u001b[1;32m    347\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_graph_def\n",
+      "\u001b[0;31mAttributeError\u001b[0m: property 'graph_def' of 'AlexNetv2' object has no setter"
      ]
     }
    ],
    "source": [
-    "model_path = '/Users/vkapoor/Downloads/models/AlexNet/seed5.pb'\n",
-    "model = models.AlexNetv2(model_path=model_path)\n"
+    "model_checkpoint_dir=\"/Users/vkapoor/Downloads/models/AlexNet/training_seed_05\"\n",
+    "training_seed = 5\n",
+    "model = models.AlexNetv2(model_checkpoint_dir=model_checkpoint_dir, training_seed = training_seed)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,34 +159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1eedd6d242fd4ea0bf4c39e286c30828",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='Layer:', options=('conv1/Conv2D', 'conv2/Conv2D', 'conv3/Conv2D', …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.visualize(layer_name, channel)>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "layer_dropdown.observe(update_channel_slider, names='value')\n",
     "\n",
