--- a/examples/interation_between_neurons.ipynb
+++ b/examples/interation_between_neurons.ipynb
@@ -6,13 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow.compat.v1 as tf \n",
-    "import matplotlib.pyplot as plt\n",
-    "from tqdm import tqdm\n",
     "import lucid_kietzmannlab.modelzoo.vision_models as models\n",
-    "import lucid_kietzmannlab.optvis.objectives as objectives\n",
-    "import lucid_kietzmannlab.optvis.render as render\n",
-    "from IPython.display import clear_output\n",
+    "from lucid_kietzmannlab.utils import interactive_visualization, batch_visualization, plot_images\n",
     "from ipywidgets import interact, Dropdown, IntSlider\n",
     "\n",
     "\n"
@@ -50,58 +45,16 @@
    "source": [
     "layer_shape_dict = model.layer_shape_dict\n",
     "\n",
-    "C = lambda neuron: objectives.channel(*neuron)    \n",
     "def visualize(layer_name, channel):\n",
-    "    # Check if the layer exists in the shape dictionary\n",
-    "    if layer_name in layer_shape_dict:\n",
-    "        # Check if the selected channel is within bounds\n",
-    "        print(layer_shape_dict[layer_name])\n",
-    "        max_channel = layer_shape_dict[layer_name][-1] - 1\n",
-    "        if 0 <= channel <= max_channel:\n",
-    "            clear_output(wait=True)\n",
-    "            # Render visualization for the selected layer and channel\n",
-    "            try:\n",
-    "              _ = render.render_vis(model, C((layer_name, channel)))\n",
-    "            except Exception:\n",
-    "                print('No gradients for this layer')   \n",
+    "    interactive_visualization(model,layer_name, channel, layer_shape_dict, scope = 'import')   \n",
     "\n",
     "def visualize_all():\n",
     "    # Check if the layer exists in the shape dictionary\n",
     "    layer_name = current_dropdown_value({'new': layer_dropdown.value})\n",
-    "    print(layer_name)\n",
-    "    if layer_name in layer_shape_dict:\n",
-    "            # Check if the selected channel is within bounds\n",
-    "            try:\n",
-    "               image_channel = {} \n",
-    "               for channel in tqdm(range(channel_slider.max)):    \n",
-    "                  images = render.render_vis(model, C((layer_name, channel)), verbose = False)\n",
-    "                  image_channel[channel] = images \n",
-    "            except Exception:\n",
-    "                print('No gradients for this layer')    \n",
+    "    image_channel = batch_visualization(model, layer_name, layer_shape_dict, channel_slider, scope = 'import')\n",
     "    return image_channel            \n",
     "                              \n",
-    "def plot_images(image_channel):\n",
-    "    channels = list(image_channel.keys())\n",
-    "    for i in range(0, len(channels), 3):\n",
-    "        fig, axs = plt.subplots(1, 3, figsize=(15, 5))  \n",
-    "        for j in range(3):\n",
-    "            channel_index = i + j\n",
-    "            if channel_index < len(channels):\n",
-    "                channel = channels[channel_index]\n",
-    "                images = image_channel[channel]\n",
-    "                try:\n",
-    "                    axs[j].imshow(images[0][0,:])  \n",
-    "                    axs[j].set_title(f\"Channel {channel}\")\n",
-    "                    axs[j].axis('off')\n",
-    "                except Exception as e:\n",
-    "                    print(f\"Error plotting channel {channel}: {e}\")\n",
-    "                    axs[j].axis('off')\n",
-    "                    axs[j].text(0.5, 0.5, 'Error', ha='center', va='center')\n",
-    "            else:\n",
-    "                axs[j].axis('off')  \n",
-    "        plt.tight_layout()\n",
-    "        plt.show()\n",
-    "        \n",
+    "\n",
     "# Create dropdown menu for layer selection\n",
     "layer_dropdown = Dropdown(options=list(layer_shape_dict.keys()), description='Layer:')\n",
     "\n",
@@ -147,7 +100,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab40c67de2654d0dbb3cef40642e0356",
+       "model_id": "327d6589384444628b609d9f4165e9db",
        "version_major": 2,
        "version_minor": 0
       },
